# Acta-Ergo-Sum

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml
.claude/: settings.json
.claude/skills/commit/: SKILL.md
.claude/skills/executor/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/memory-protocol/: SKILL.md
.claude/skills/planner/: SKILL.md
.github/workflows/: ci.yml  publish.yml
.hxsk/: ARCHITECTURE.md  PATTERNS.md  STACK.md  STATE.md  project-config.yaml
.hxsk/hooks/: session-start.sh
.hxsk/memories/_schema/: base.schema.json
.hxsk/memories/bootstrap/: 2026-03-25_project-bootstrap.md
.hxsk/memories/general/: 2026-03-25_session-handoff-hxsk.md
.hxsk/memories/session-summary/: 2026-03-26_session-2026-03-26-10-42-44-master.md  2026-03-26_session-2026-03-26-10-55-31-master.md  2026-03-26_session-2026-03-26-11-12-14-master.md  2026-03-26_session-2026-03-26-11-20-10-master.md  2026-03-26_session-2026-03-26-11-23-09-master.md  (+5 more)
.hxsk/phases/2/: PHASE.md  (+5 more)
acta/: analyzer.py  cli.py  client.py  extractors.py  mcp_server.py  writers.py
acta/deep/: __init__.py  collector.py  detector.py  renderer.py
deep_analysis/Acta-Ergo-Sum/: community.md  evolution.md  metadata.json  overview.md  structure.md  tech_stack.md
docs/plans/: 2026-03-25-incremental-update-design.md  2026-03-25-llm-analysis-design.md  2026-03-25-structure-refactor-design.md
templates/: profile.md  project-summary.md  resume.md  weekly.md
tests/: test_analyzer.py  test_cli.py  test_client.py  test_deep.py  test_extractors.py  test_writers.py
(+7 files in other folders)
