[project]
name = "acta-ergo-sum"
version = "0.1.0"
description = "GitHub activity data extractor — I act, therefore I am."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Sukbeom H" },
]
keywords = ["github", "cli", "portfolio", "resume", "knowledge-base", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]

[project.urls]
Homepage = "https://github.com/SukbeomH/Acta-Ergo-Sum"
Repository = "https://github.com/SukbeomH/Acta-Ergo-Sum"
Issues = "https://github.com/SukbeomH/Acta-Ergo-Sum/issues"

[project.scripts]
acta = "acta.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acta"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
